--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "classnames": "^2.1.3",
     "immutable": "^3.8.1",
     "react": "^15.5.4",
+    "react-addons-pure-render-mixin": "^15.5.2",
     "react-addons-test-utils": "^15.5.1",
     "react-dom": "^15.5.4"
   }
